# ci601

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  RELEASE-CHECKLIST.md
.github/workflows/: ci.yml  coverage.yml  release.yml
crates/bibadd/: Cargo.toml
crates/bibadd/src/format/: bibtex.rs  mod.rs
crates/bibadd/src/service/: doi.rs
crates/bibadd/src/service/api/: mod.rs
crates/core/: app.rs  file.rs  interact.rs  main.rs
crates/core/commands/: add.rs  mod.rs
crates/seb/: Cargo.toml
crates/seb/src/: ast.rs  error.rs  lib.rs  parse.rs
crates/seb/src/api/: cross_ref.rs  format_api.rs  google_books.rs  ietf.rs  mod.rs
crates/seb/src/ast/: biblio.rs  entry.rs  mod.rs  quoted_string.rs
crates/seb/src/ast/biblio/: mod.rs  resolver.rs
crates/seb/src/ast/entry/: mod.rs  resolver.rs
crates/seb/src/format/: bibtex.rs  mod.rs
crates/seb/src/service/: isbn.rs  mod.rs
crates/seb/src/service/api/: google_books.rs
seb-cli/: Cargo.toml  README.md
seb-cli/src/: app.rs  file.rs  interact.rs  main.rs
seb-cli/src/commands/: add.rs  mod.rs
seb-lib/: Cargo.toml  README.md
seb-lib/src/: error.rs  file.rs  lib.rs
seb-lib/src/api/: cross_ref.rs  format_api.rs  google_books.rs
seb-lib/src/ast/: mod.rs
seb-lib/src/ast/biblio/: mod.rs  resolver.rs
seb-lib/src/ast/entry/: mod.rs  resolver.rs
seb-lib/src/format/: bibtex.rs  mod.rs
seb-lib/tests/data/: bibtex1.bib
seb-macro/: Cargo.toml
seb-macro/src/: lib.rs  resolver.rs
src/: ast.rs  file.rs  lib.rs  main.rs  parse.rs
src/format/: bibtex.rs  mod.rs
src/service/: doi.rs  isbn.rs  mod.rs
src/service/api/: cross_ref.rs  google_books.rs
tests/: cli.rs
tests/data/: crossref_entry_stub.json  google_book_json.txt
