[package]
name = "bibadd_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
biblatex = "0.4.2"
clap = { version = "3.0", features = ["derive"] }
eyre = "0.6.5"
glob = "0.3"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }
stderrlog = "0.5.1"
bibadd = { path = "crates/bibadd" }

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"
serde_json = "1.0.73"


[[bin]]
bench = false
path = "crates/core/main.rs"
name = "bibadd"

[workspace]
members = [
  "crates/bibadd",
]
