[package]
name = "seb-cli"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
eyre = "0.6.5"
log = "0.4.14"
stderrlog = "0.5.1"
seb = { path = "../seb-lib", features = ["file"] }
dialoguer = "0.9.0"

[dev-dependencies]
assert_cmd = "2.0.2"
assert_fs = "1.0.6"

[[bin]]
path = "src/main.rs"
name = "seb"
