[package]
name = "seb"
version = "0.2.0"
edition = "2021"

[dependencies]
biblatex = { version = "0.4.2", optional = true }
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }

[dev-dependencies]
serde_json = "1.0.73"

[features]
default = ["bibtex"]
bibtex = ["biblatex"]

