[package]
name = "seb"
version = "0.2.1"
edition = "2021"

[dependencies]
biblatex = { version = "0.4.2", optional = true }
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }
glob = { version = "0.3", optional = true }

[dev-dependencies]
serde_json = "1.0.73"
assert_fs = "1.0.6"

[features]
default = ["bibtex"]
bibtex = ["biblatex"]
file = ["glob"]
