[package]
name = "seb"
version = "0.1.0"
edition = "2021"

[dependencies]
biblatex = "0.4.2"
eyre = "0.6.5"
log = "0.4.14"
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0.132", features = ["derive"] }
stderrlog = "0.5.1"

[dev-dependencies]
serde_json = "1.0.73"

[features]


